[package]
name = "client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0" }
console_error_panic_hook = { version = "0.1"}
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
hex = "0.4"
hex-literal = "0.3"
log = "0.4"
console_log = {version ="0.2", features = ["color"]}
sauron = "0.40"
serde = { version = "1.0", features = ["serde_derive"]}
serde_json = { version = "1.0.63" }
thiserror = "1.0"
wasm-bindgen = "0.2.29"
web3 = { version = "0.17", default-features = false, features = ["wasm"] }


