[package]
name = "api3tracker"
version = "0.1.0"
authors = ["EnormousCloud"]
edition = "2018"

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
cached = { version = "0.26" }
chrono = { version = "0.4", features = ["serde"] }
client = { path = "../client" }
clap = { version = "2.33", default-features = false }
crc32fast = "1.2.1"
dotenv = "0.15"
futures = "0.3.17"
jsonrpc-core = "18.0"
hex = "0.4"
hex-literal = "0.3"
lazy_static = "^1.4"
nipper = "0.1.9"
prometheus = { version = "0.13", default-features = false }
sauron = "0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = { version = "0.3", default-features = false }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = { version = "0.1" }
tracing-futures =  { version = "0.2" }
tracing-subscriber = { version = "0.2" }
warp = { version = "0.3" }
web3 = { version = "0.17" }
ureq = { version = "2.3" }